<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">雪松金融</string>
    <string name="searchMenu">查询</string>
    <string name="searchLabel">查询</string>
    <string name="searchHint">请输入查询内容</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_updatetime_label">更新于：刚刚</string>
    <string name="pull_to_refresh_release_label">释放立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_tap_label">点击刷新...</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_task_info">TaskInfoActivity</string>
    <string name="title_activity_task_new">TaskNewActivity</string>
    <string name="title_activity_task_attach">TaskAttach</string>
    <string name="title_activity_view_photo">ViewPhoto</string>
    <string name="title_activity_erp_order">ErpOrderActivity</string>
    <string name="title_activity_client_list">ClientListActivity</string>
    <string name="title_activity_client_constract_list">ClientConstractListActivity</string>
    <string name="title_activity_client_info">ClientInfoActivity</string>
    <string name="title_activity_client_constact_new">ClientConstactNewActivity</string>
    <string name="title_activity_sale_chance">SaleChanceActivity</string>
    <string name="title_activity_sale_chance_info">SaleChanceInfoActivity</string>
    <string name="title_activity_advertisement">AdvertisementActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_client_constact_info">ClientConstactInfoActivity</string>
    <string name="title_activity_menu_new">MenuNewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_list">TestListActivity</string>
    <string name="title_activity_test_info">TestInfoActivity</string>
    <string name="title_activity_measure_list">MeasureListActivity</string>
    <string name="title_activity_setting_notice">SettingNoticeActivity</string>
    <string name="title_activity_audit_form">AuditFormActivity</string>
    <string name="title_activity_communication">CommunicationActivity</string>
    <string name="title_activity_task_list_new">TaskListNewActivity</string>
    <string name="reason">请选择不能上刊原因</string>
    <string name="sitestatus">请选择点位状态</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="send_feeback">Send Feedback</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="oops">Oops</string>
    <string name="describe_01">-如果这位下属是部门负责人，请输入负责的部门名称。</string>
    <string name="describe_02">-只需要邀请您的直接下属，您直接的下属的下属将由您的直接下属来邀请。</string>
    <string name="describe_03">-点击邀请后，将进入短信发送界面，请点击发送，将邀请短信发送给被邀请人。</string>
    <string name="invite">邀请</string>
    <string name="employee_name">员工姓名</string>
    <string name="employee_phoneNumber">手机号码</string>
    <string name="department_name">部门名称</string>
    <string name="title_activity_client_new">ClientNewActivity</string>
    <string name="title_activity_communication_add">CommunicationAddActivity</string>
    <string name="title_activity_create_vm_details_form_add_row">CreateVmDetailsFormAddRowActivity</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="title_activity_task_tab_list">TaskTabListActivity</string>
    <string name="title_activity_week_log_info">WeekLogInfoActivity</string>
    <string name="title_activity_task_calender">TaskCalenderActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="title_activity_project_add">ProjectAddActivity</string>
    <string name="title_activity_project_info">ProjectInfoActivity</string>
    <string name="title_activity_attach_list">AttachListActivity</string>
    <string name="title_activity_product_list">ProjectListActivity</string>
    <string name="title_activity_product_select_list">ProductSelectListActivity</string>
    <string name="title_activity_product_add">ProductAddActivity</string>
    <string name="title_activity_imagepager">imagepager</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="order_no">NO.%1$05d</string>
    <string name="order_total_1">合计:￥%1$.2f</string>
    <string name="order_total">共%1$d组, 合计:￥%2$.2f</string>
    <string name="select_photo_no">确定(%1$d/%2$d)</string>
    <string name="title_activity_rad_room_list">RadRoomListActivity</string>
    <string name="title_activity_ch_work_plan_info">ChWorkPlanInfoActivity</string>

</resources>